Created ProgressFragment, implemented ActionBar menu

--- a/Chordstars/app/src/main/res/values/strings.xml
+++ b/Chordstars/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">Chordstar</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="view_progress">View Progress Log</string>
+
     <string-array name="songs">
         <item>Taylor Swift - State of Grace</item>
         <item>Taylor Swift - Shake it Off</item>
@@ -11,5 +13,7 @@
         <item>T-Pain - Buy You A Drank</item>
         <item>YOUR SONGS</item>
     </string-array>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
