--- a/Chordstars/app/src/main/res/values/strings.xml
+++ b/Chordstars/app/src/main/res/values/strings.xml
@@ -14,6 +14,12 @@
         <item>YOUR SONGS</item>
     </string-array>
 
+    <string-array name="times">
+        <item>THIS WEEK</item>
+        <item>LAST WEEK</item>
+        <item>AVERAGE WEEK</item>
+    </string-array>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
