--- a/Chordstars/app/src/main/res/values/strings.xml
+++ b/Chordstars/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="view_progress">View Progress Log</string>
+    <string name="view_tuner">View Tuner</string>
 
     <string-array name="songs">
         <item>Taylor Swift - State of Grace</item>
